tests/NormalTests/paczka1/fuzzy1/52199504.err
Error in line 2: uyNREXdtR S478 61,3
Error in line 15: X9YV1 S842 87,5
